--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.1.0",
