--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,25 +11,15 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
-    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^5.1.0",
-    "express-session": "^1.18.1",
     "lucide-react": "^0.487.0",
-    "mongodb": "^6.15.0",
-    "mongoose": "^8.13.2",
     "next": "15.2.4",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "serverless-http": "^3.2.0",
     "tailwind-merge": "^3.1.0",
-    "tw-animate-css": "^1.2.5",
-    "uuid": "^11.1.0"
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
